trying to fix my shittyness

--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                     </div>
                 </section>
             </div>
+            <div>
+                <h3 id="hometown">not political climate</h3>
+                <img id="weatherImg">
+                <p id="currentTemp"></p>
+                <p id="currentClimate"></p>
+                <p id="currentHumid"></p>
+                <p id="windSpeed"></p>
+                <p id="uvIndex"></p>
+
+            </div>
+            <div class= "card">
+
+            </div>
 
         </div>
     </div>
