--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h1>Weather Dashboard</h1>
 
         <div class="row">
-            <div class="col-sm-4">
+            <form class="col-sm-4">
 
                 <!-- <form class="search-bar" action="action_page.php"> -->
 
-                    <input type="text" placeholder="Search.." name="search">
+                    <input type="text" placeholder="Search.." id="search">
                     <input type="reset" id="clear-button" value="Reset"/>
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="click" class="button-dad"><i class="fa fa-search"></i></button>
                     
                 <!-- S -->
                 <ul class="list-group">
@@ -32,7 +32,7 @@
                     <li class="list-group-item">San Fransico</li>
                     <li class="list-group-item">Denver</li>
                 </ul>
-            </div>
+            </form>
             <div class="col-sm-8">
                 <section class="ajax-section">
                     <div class="container">
