finished main forecast section

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid allofit">
         <h1>Weather Dashboard</h1>
 
         <div class="row">
-            <form class="col-sm-4">
+            <form class="col-sm-4  history-form">
 
                 <!-- <form class="search-bar" action="action_page.php"> -->
 
