--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <div class="container-fluid allofit">
-        <h1>Weather Dashboard</h1>
-
+    <div class=" allofit">
+        <Header>
+            <h1>Weather Dashboard</h1>
+        </Header>
         <div class="top-section">
             <form class="col-sm-4  history-form">
 
@@ -35,7 +36,7 @@
                 </section>
             </div>
         </div>
-        <h3 id="hometown">not political climate, 5 day forecast</h3>
+        <h3 id="hometown"> 5 day forecast</h3>
             <div class="five-day-cards">
                 
               
